# segment

./: Cargo.toml  README.md
.github/workflows/: publish-to-crates-io.yml  rust.yml
examples/: etl.rs  etl_auto_batch.rs  simple.rs
src/: auto_batcher.rs  batcher.rs  client.rs  http.rs  lib.rs  message.rs
